force-app/main/default/objects/ServiceConfig__mdt/ServiceConfig__mdt.object-meta.xml
<CustomObject>
    <description>Registry mapping URL resource segments to Apex service implementation classes.</description>
    <label>Service Config</label>
    <pluralLabel>Service Configs</pluralLabel>
</CustomObject>