force-app/main/default/objects/ServiceConfig__mdt/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>API name of the Apex class that implements livymobile.Service for this resource.</description>
    <label>Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>