force-app/main/default/objects/ServiceConfig__mdt/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <description>Namespace prefix of the implementation class. Leave blank for unmanaged classes.</description>
    <label>Namespace</label>
    <length>40</length>
    <type>Text</type>
</CustomField>