force-app/main/default/objects/ServiceConfig__mdt/fields/ResourceName__c.field-meta.xml
<CustomField>
    <fullName>ResourceName__c</fullName>
    <description>Lowercase URL segment matched by the router, e.g. &apos;properties&apos;.</description>
    <label>Resource Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>